bump to new moderation bot version